mobile number change

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container d-flex justify-content-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope"></i> <a href="mailto:contact@example.com">info.cdlsh@gmail.com</a>
-        <i class="bi bi-phone"></i><a href="tel:+919486472934">+91&nbsp9486472934</a>
+        
       </div>
       <div class="d-none d-lg-flex social-links align-items-center">
         <a href="https:twitter.com" class="twitter"><i class="bi bi-twitter"></i></a>
@@ -1038,7 +1038,8 @@
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
                 &nbsp&nbsp&nbsp<a href="tel:04142-233 233">04142-233 233</a><br>
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="tel:04142-233 233">04142-233 243</a>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="tel:04142-233 233">04142-233 243</a><br>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="tel:7904999929">7904999929</a>
               </div>
 
             </div>
